# nonsense-discord-bot

./: .gitignore  Cargo.toml  README.md  bot.py
src/: cmd.rs  config.rs  handler.rs  main.rs  state.rs
