[package]
name = "nonsense-discord-bot"
version = "0.1.0"
authors = ["io12 <io12@users.noreply.github.com>"]
edition = "2021"
publish = false

[dependencies]
markov = "1.1.0"
regex = "1.5.6"
lazy_static = "1.4.0"

[dependencies.serenity]
version = "0.11.2"
features = ["utils"]

[dependencies.tokio]
version = "1.19.2"
features = ["macros", "rt-multi-thread"]
