[package]
name = "nonsense-discord-bot"
version = "0.1.0"
authors = ["io12 <io12@users.noreply.github.com>"]
edition = "2021"
publish = false

[dependencies]
markov = "1.1.0"
regex = "1.11.1"
lazy_static = "1.5.0"

[dependencies.serenity]
version = "0.11.7"
features = ["utils"]

[dependencies.tokio]
version = "1.45.0"
features = ["macros", "rt-multi-thread"]
